@@ -1,3 +1,5 @@
+* Use instance context in translated descriptor of Selection
+
 Version 3.8.0 - 2015-11-02
 * Bug fixes (see mercurial logs for details)
 * Add test for all field methods
